# tauri-plugin-sqlite

./: .gitignore  Cargo.toml  README.md  api-iife.js  build.rs  package.json  pnpm-lock.yaml  rollup.config.js
example/xdrizzle/: package.json  pnpm-lock.yaml
example/xdrizzle/src-tauri/: Cargo.toml  tauri.conf.json
example/xdrizzle/src-tauri/migrations/meta/: _journal.json
example/xdrizzle/src-tauri/src/: main.rs
example/xdrizzle/src/lib/db/: database.ts
example/xdrizzle/src/lib/drizzle/: session.ts
examples/xdrizzle/: package.json  pnpm-lock.yaml
examples/xdrizzle/src/: App.tsx
examples/xdrizzle/src-tauri/: Cargo.toml
examples/xdrizzle/src-tauri/capabilities/: default.json
examples/xdrizzle/src-tauri/migrations/meta/: 0000_snapshot.json
examples/xdrizzle/src-tauri/src/: lib.rs
examples/xdrizzle/src/lib/db/: database.ts  schema.ts
examples/xdrizzle/src/lib/drizzle/: driver.ts
guest-js/: index.ts
permissions/autogenerated/: reference.md
permissions/autogenerated/commands/: sql_transaction_begin.toml  sql_transaction_commit.toml  sql_transaction_execute.toml  sql_transaction_rollback.toml  sql_transaction_select.toml
permissions/schemas/: schema.json
shared/: rollup.config.js
src/: commands.rs  lib.rs  wrapper.rs
src/decode/: mod.rs
