[package]
name = "tauri-plugin-sqlite"
version = "0.0.1"
description = "Interface with SQL databases."
edition = "2021"
authors = ["Tauri Programme within The Commons Conservancy"]
license = "Apache-2.0 OR MIT"
rust-version = "1.77.2"
repository = "https://github.com/tauri-apps/plugins-workspace"
links = "tauri-plugin-sqlite"

[package.metadata.docs.rs]
features = ["sqlite"]
rustc-args = ["--cfg", "docsrs"]
rustdoc-args = ["--cfg", "docsrs"]

[package.metadata.platforms.support]
windows = { level = "full", notes = "" }
linux = { level = "full", notes = "" }
macos = { level = "full", notes = "" }
android = { level = "full", notes = "" }
ios = { level = "full", notes = "" }

[build-dependencies]
tauri-plugin = { version = "2.3", features = ["build"] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.6", default-features = false }
log = "0.4"
thiserror = "2"
futures-core = "0.3"
sqlx = { version = "0.8", features = ["json", "time", "sqlite", "runtime-tokio"] }
time = "0.3"
tokio = { version = "1", features = ["sync"] }
indexmap = { version = "2", features = ["serde"] }


